<resources>
    <string name="app_name">TP10</string>
    <string name="buttonclear">Clear</string>
    <string name="button0">0</string>
    <string name="buttonback">Back</string>
    <string name="buttonenter">Enter</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="buttonplus">+</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="buttonmoins">-</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttondiv">/</string>
    <string name="buttonpop">Pop</string>
    <string name="buttonswap">Swap</string>
    <string name="buttonvir">,</string>
    <string name="buttonfois">*</string>
</resources>
